kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment
  labels:
    app: webapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: webapp
        image: racarlosdavid/k8s_frontend
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: svc-webapp
  labels:
    app: webapp
spec:
  type: ClusterIP
  selector:
    app: webapp
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: backend-deployment
spec:
  replicas: 4
  selector:
    matchLabels:
      app: backend-deployment
  template:
    metadata:
      labels:
        app: backend-deployment
    spec:
      containers:
        - name: backend
          image: racarlosdavid/k8s_backend
          ports:
            - containerPort: 2000
---
apiVersion: v1
kind: Service
metadata:
  name: svc-backend
  labels:
    app: backend-deployment
spec:
  type: ClusterIP
  selector:
    app: backend-deployment
  ports:
    - port: 2000
      targetPort: 2000
      protocol: TCP
